--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -18,7 +18,7 @@
 
   <style>
     html {
-      background:#018DED url(http://unsplash.it/1500/1000?image=881&blur=50);
+      background:#018DED url(http://unsplash.it/1500/1000?image=881);
       background-size:cover;
       font-family:'helvetica neue';
       text-align: center;
@@ -62,12 +62,36 @@
       background:black;
       position: absolute;
       top:50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.1s;
+      transition-timing-function: cubic-bezier(0.18, 0.89, 0.32, 1.28);
     }
 
   </style>
 
   <script>
 
+  const secondHand = document.querySelector('.second-hand');
+  const minHand = document.querySelector('.min-hand');
+  const hourHand = document.querySelector('.hour-hand');
+
+  function setDate() {
+    const now = new Date();
+    const seconds = now.getSeconds();
+    const minutes = now.getMinutes();
+    const hours = now.getHours();
+    console.log(now);
+    const secondsDegrees = ((seconds / 60) * 360) + 90;
+    const minsDegrees = ((minutes / 60) * 360) + ((seconds/60)*6) + 90;
+    const hoursDegrees = ((hours / 12) * 360) + ((minutes / 60) * 30)+ 90;
+    secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+    minHand.style.transform = `rotate(${minsDegrees}deg)`;
+    hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
+
+  }
+
+  setInterval(setDate, 1000);
 
   </script>
 </body>
