--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,15 +26,37 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const currentYear = (new Date()).getFullYear();
+
+    const some = people.some(person => {
+      return person.year <= (currentYear - 19);
+    });
+    console.log(`Are some people older than 19? ${some}`);
+
     // Array.prototype.every() // is everyone 19 or older?
+    const every = people.every(person => {
+      return person.year <= (currentYear - 19);
+    });
+    console.log(`Is every person older than 19? ${every}`);
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    const theOne = comments.find(comment => comment.id === 823423);
+    console.log(theOne.text);
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
+    const theOneIndex = comments.findIndex(comment => {return comment.id === 823423;});
+    console.log(`The index of the comment is ${theOneIndex}`);
+
     // delete the comment with the ID of 823423
+    comments.splice(theOneIndex, 1);
+
+    console.log('remaining comments:');
+    comments.forEach(comment => {console.log(comment.text);});
+
+    
 
   </script>
 </body>
