--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-  <p onClick="makeGreen()">×BREAK×DOWN×</p>
+  <p class="ouch" onClick="makeGreen()">×BREAK×DOWN×</p>
 
   <script>
     const dogs = [{ name: 'Snickers', age: 2 }, { name: 'hugo', age: 8 }];
@@ -18,28 +18,47 @@
     }
 
     // Regular
-
+    console.log("hello");
     // Interpolated
-
+    console.log("Hello I am a %s string!", ':+1:');
     // Styled
-
+    console.log('%c This is great font!', 'font-size: 50px; background-color: red;');
     // warning!
-
+    console.warn('OH NOO');
     // Error :|
-
+    console.error("shit!");
     // Info
-
+    console.info('I rarely drive steamboats');
     // Testing
-
+    const p = document.querySelector('p');
+    console.assert(p.classList.contains('ouchie'), 'That is wrong!');
     // clearing
-
+    // console.clear();
     // Viewing DOM Elements
-
+    console.log(p);
+    console.dir(p);
     // Grouping together
-
+    dogs.forEach(dog => {
+      console.groupCollapsed(`${dog.name}`);
+      console.log(`${dog.name} is ${dog.age} years old`);
+      console.groupEnd(`${dog.name}`);
+    })
     // counting
+    console.count('Eric');
+    console.count('Eric');
+    console.count('Steve');
+    console.count('Eric');
 
     // timing
+    console.time('fetching data');
+    fetch('https://api.github.com/users/ericjzell')
+      .then(data => data.json())
+      .then(data => {
+        console.log(data);
+        console.timeEnd('fetching data');
+      })
+
+    console.table(dogs);
 
   </script>
 </body>
